[gd_scene load_steps=4 format=2]

[ext_resource path="res://producto/assets/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://producto/scripts/MenuRanking.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="MenuRanking" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 10.0
margin_right = 22.0
margin_bottom = 10.0
script = ExtResource( 2 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = -47.0
margin_top = -27.0
margin_right = 1040.0
margin_bottom = 622.0
color = Color( 0, 0, 0, 0.407843 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 103.0
margin_top = 45.0
margin_right = 881.0
margin_bottom = 535.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 112.0
margin_top = 54.0
margin_right = 873.0
margin_bottom = 525.0
color = Color( 0.0352941, 0.309804, 0.443137, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 121.0
margin_top = 61.0
margin_right = 865.0
margin_bottom = 519.0
color = Color( 0, 0, 0, 1 )

[node name="Ranking_Local" type="ColorRect" parent="."]
pause_mode = 2
margin_left = 511.0
margin_top = 90.0
margin_right = 826.0
margin_bottom = 446.0
color = Color( 0.0352941, 0.309804, 0.443137, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Ranking_Local"]
margin_left = 39.0
margin_top = 56.0
margin_right = 290.0
margin_bottom = 332.0

[node name="Nombres" type="VBoxContainer" parent="Ranking_Local/HBoxContainer"]
margin_right = 58.0
margin_bottom = 276.0

[node name="Nombre1" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_right = 58.0
margin_bottom = 24.0

[node name="Nombre2" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_top = 28.0
margin_right = 58.0
margin_bottom = 52.0

[node name="Nombre3" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_top = 56.0
margin_right = 58.0
margin_bottom = 80.0

[node name="Nombre4" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_top = 84.0
margin_right = 58.0
margin_bottom = 108.0

[node name="Nombre5" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_top = 112.0
margin_right = 58.0
margin_bottom = 136.0

[node name="Nombre6" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_top = 140.0
margin_right = 58.0
margin_bottom = 164.0

[node name="Nombre7" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_top = 168.0
margin_right = 58.0
margin_bottom = 192.0

[node name="Nombre8" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_top = 196.0
margin_right = 58.0
margin_bottom = 220.0

[node name="Nombre9" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_top = 224.0
margin_right = 58.0
margin_bottom = 248.0

[node name="Nombre10" type="LineEdit" parent="Ranking_Local/HBoxContainer/Nombres"]
margin_top = 252.0
margin_right = 58.0
margin_bottom = 276.0

[node name="Scores" type="VBoxContainer" parent="Ranking_Local/HBoxContainer"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 276.0

[node name="Score1" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_right = 58.0
margin_bottom = 24.0

[node name="Score2" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_top = 28.0
margin_right = 58.0
margin_bottom = 52.0

[node name="Score3" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_top = 56.0
margin_right = 58.0
margin_bottom = 80.0

[node name="Score4" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_top = 84.0
margin_right = 58.0
margin_bottom = 108.0

[node name="Score5" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_top = 112.0
margin_right = 58.0
margin_bottom = 136.0

[node name="Score6" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_top = 140.0
margin_right = 58.0
margin_bottom = 164.0

[node name="Score7" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_top = 168.0
margin_right = 58.0
margin_bottom = 192.0

[node name="Score8" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_top = 196.0
margin_right = 58.0
margin_bottom = 220.0

[node name="Score9" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_top = 224.0
margin_right = 58.0
margin_bottom = 248.0

[node name="Score10" type="LineEdit" parent="Ranking_Local/HBoxContainer/Scores"]
margin_top = 252.0
margin_right = 58.0
margin_bottom = 276.0

[node name="LineEdit" type="LineEdit" parent="Ranking_Local"]
margin_left = 97.0
margin_top = 14.0
margin_right = 221.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Ranking Local"

[node name="Ranking_Mundial" type="ColorRect" parent="."]
pause_mode = 2
margin_left = 158.0
margin_top = 90.0
margin_right = 473.0
margin_bottom = 446.0
color = Color( 0.0352941, 0.309804, 0.443137, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Ranking_Mundial"]
margin_left = 39.0
margin_top = 56.0
margin_right = 290.0
margin_bottom = 332.0

[node name="Nombres" type="VBoxContainer" parent="Ranking_Mundial/HBoxContainer"]
margin_right = 58.0
margin_bottom = 276.0

[node name="Nombre1" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_right = 58.0
margin_bottom = 24.0

[node name="Nombre2" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_top = 28.0
margin_right = 58.0
margin_bottom = 52.0

[node name="Nombre3" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_top = 56.0
margin_right = 58.0
margin_bottom = 80.0

[node name="Nombre4" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_top = 84.0
margin_right = 58.0
margin_bottom = 108.0

[node name="Nombre5" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_top = 112.0
margin_right = 58.0
margin_bottom = 136.0

[node name="Nombre6" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_top = 140.0
margin_right = 58.0
margin_bottom = 164.0

[node name="Nombre7" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_top = 168.0
margin_right = 58.0
margin_bottom = 192.0

[node name="Nombre8" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_top = 196.0
margin_right = 58.0
margin_bottom = 220.0

[node name="Nombre9" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_top = 224.0
margin_right = 58.0
margin_bottom = 248.0

[node name="Nombre10" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Nombres"]
margin_top = 252.0
margin_right = 58.0
margin_bottom = 276.0

[node name="Scores" type="VBoxContainer" parent="Ranking_Mundial/HBoxContainer"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 276.0

[node name="Score1" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_right = 58.0
margin_bottom = 24.0

[node name="Score2" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_top = 28.0
margin_right = 58.0
margin_bottom = 52.0

[node name="Score3" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_top = 56.0
margin_right = 58.0
margin_bottom = 80.0

[node name="Score4" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_top = 84.0
margin_right = 58.0
margin_bottom = 108.0

[node name="Score5" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_top = 112.0
margin_right = 58.0
margin_bottom = 136.0

[node name="Score6" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_top = 140.0
margin_right = 58.0
margin_bottom = 164.0

[node name="Score7" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_top = 168.0
margin_right = 58.0
margin_bottom = 192.0

[node name="Score8" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_top = 196.0
margin_right = 58.0
margin_bottom = 220.0

[node name="Score9" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_top = 224.0
margin_right = 58.0
margin_bottom = 248.0

[node name="Score10" type="LineEdit" parent="Ranking_Mundial/HBoxContainer/Scores"]
margin_top = 252.0
margin_right = 58.0
margin_bottom = 276.0

[node name="LineEdit" type="LineEdit" parent="Ranking_Mundial"]
margin_left = 97.0
margin_top = 14.0
margin_right = 240.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Ranking Mundial"

[node name="Volver" type="Button" parent="."]
pause_mode = 2
margin_left = 772.0
margin_top = 479.0
margin_right = 833.0
margin_bottom = 499.0
text = "VOLVER"

[connection signal="button_down" from="Volver" to="." method="_on_Volver_button_down"]
